service.yml
apiVersion: v1
kind: Service
metadata:
  name: gop-fs-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080



apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP


apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  type: NodePort
  selector:
    app: result
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5001
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31001


apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-service
spec:
  ports:
    - name: client
      port: 6379
      targetPort: 6379
    - name: gossip
      port: 16379
      targetPort: 16379
